--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -274,7 +274,7 @@ Read the announcement on the [UnJS blog](https://unjs.io/blog/2023-08-15-h3-towa
 
 You can start by defining middleware in a file like `utils/auth.ts` to be able to auto-import them in your routes:
 
-```ts [utils/middleware/auth.ts]
+```ts [utils/auth.ts]
 export const auth = defineRequestMiddleware((event) => {
   event.context.auth = { name: 'admin' }
 })
