--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -280,7 +280,7 @@ export const auth = defineRequestMiddleware((event) => {
 })
 ```
 
-```ts [utils/middleware/log.ts]
+```ts [utils/log.ts]
 export const log = defineRequestMiddleware((event) => {
   console.log(event)
 })
