--- a/docs/content/1.guide/1.configuration.md
+++ b/docs/content/1.guide/1.configuration.md
@@ -90,7 +90,7 @@ API_TOKEN="123"
 
 Re-start the development server, fetch the `/api/example` endpoint and you should see `123` as the response instead of `dev_token`.
 
-Do not froget taht you can still universally access environment variables using `import.meta.env` or `process.env` but avoid using them in ambiant global contexts to prevent unexpected behavior.
+Do not forget that you can still universally access environment variables using `import.meta.env` or `process.env` but avoid using them in ambiant global contexts to prevent unexpected behavior.
 
 ### Production
 
