--- a/docs/content/1.guide/6.assets.md
+++ b/docs/content/1.guide/6.assets.md
@@ -96,7 +96,7 @@ You could want to add a directory with html templates for example.
 export default defineNitroConfig({
   serverAssets: [{
     baseName: 'templates',
-    dir: './templates' // Relative to `srcDir` (`.` for nitro)
+    dir: './templates'
   }]
 })
 ```
