--- a/docs/content/1.guide/6.fetch.md
+++ b/docs/content/1.guide/6.fetch.md
@@ -6,7 +6,7 @@ icon: i-ri-global-line
 
 Nitro provides a built-in fetch API that can be used to get data from server endpoints or from other sources. It's build on top of the [unjs/ofetch](https://ofetch.unjs.io) package.
 
-This is important to use fetch-api (`fetch` or `$fetch`) instead of libraries such as axios because it's optimized for serverless environments and agnostic to the runtime.
+This is important to use fetch-api instead of libraries such as axios because it's optimized for serverless environments and agnostic to the runtime.
 
 ::alert{type="info"}
 You can keep using native `fetch()` if prefer.
