--- a/docs/content/2.deploy/0.index.md
+++ b/docs/content/2.deploy/0.index.md
@@ -6,11 +6,11 @@ icon: ri:upload-cloud-2-line
 
 Nitro can generate different output formats suitable for different hosting providers from the same code base.
 
-Using built-in presets, you can easily configure Nitro to adjust it's output format with almost no additional code or configuration!
+Using built-in presets, you can easily configure Nitro to adjust its output format with almost no additional code or configuration!
 
 ## Default output
 
-Default production output preset is [Node.js server](/deploy/node).
+The default production output preset is [Node.js server](/deploy/node).
 
 When running Nitro in development mode, Nitro will always use a special preset called `nitro-dev` using Node.js with ESM in an isolated Worker environment with behavior as close as possible to the production environment.
 
@@ -27,25 +27,21 @@ When deploying to production using CI/CD, Nitro tries to automatically detect th
 - [vercel](/deploy/providers/vercel)
 - [zeabur](/deploy/providers/zeabur)
 
-::alert{type="info"}
-**Note:** Even with these presets, if you need to build your application locally (for development or testing purposes) targeting the provider environment, you still need to tell Nitro what preset it needs to use (you can see below how).
-::
-
 ## Changing the deployment preset
 
-If you need to build Nitro against a specific provider, you can target it by defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration).
+If you need to build Nitro against a specific provider, you can target it by defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration) or using `--preset` argument.
 
 Using the environment variable approach is recommended for deployments depending on CI/CD.
 
 **Example:** Defining a `NITRO_PRESET` environment variable
 ```bash
-NITRO_PRESET=aws_lambda nitro build
+nitro build --preset cloudflare_pages
 ```
 
 **Example:** Updating the `nitro.config.ts` file
 
 ```ts
 export default defineNitroConfig({
-  preset: 'aws_lambda'
+  preset: 'cloudflare_pages'
 })
 ```
