--- a/docs/content/1.guide/0.getting-started.md
+++ b/docs/content/1.guide/0.getting-started.md
@@ -4,9 +4,11 @@ icon: ri:rocket-2-line
 
 # Getting Started
 
-Under the hood, Nitro is using [h3](https://h3.unjs.io) as HTTP framework, embeds many utilities (file routing, storage, cache...) and preconfigured packages like [unimports](https://unimports.unjs.io) or [unstorage](https://unstorage.unjs.io) and provide a set of presets to deploy your server anywhere.
+<!-- TODO: Better introduction Under the hood, Nitro is using [h3](https://h3.unjs.io) as HTTP framework, embeds many utilities (file routing, storage, cache...) and preconfigured packages like [unimports](https://unimports.unjs.io) or [unstorage](https://unstorage.unjs.io) and provide a set of presets to deploy your server anywhere.
 
 Now you know what Nitro is, let's get started and create your first Nitro app!
+
+-->
 
 ## Play Online
 
