docs: wrong example in Catch all params in Routing page. Fix it.

--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -86,9 +86,9 @@ You can capture all the remaining parts of a URL using `[...<param>]` syntax. Th
 
 ```ts [/routes/hello/[...name\\].ts]
 export default defineEventHandler(event => {
-  const name = getRouterParam(event, 'name')
+  const params = getRouterParams(event)
 
-  return `Hello ${name}!`
+  return `Hello ${params}!`
 })
 ```
 
