--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -45,7 +45,7 @@ export default defineEventHandler(() => {
 })
 ```
 
-You do not need to import `defineEventHandler` as it is automatically imported thanks to [auto-import feature](/auto-imports).
+You do not need to import `defineEventHandler` as it is automatically imported thanks to [auto-import feature](/guide/auto-imports).
 
 ### Route with params
 
