Update link to auto-imports

--- a/docs/content/1.guide/1.configuration.md
+++ b/docs/content/1.guide/1.configuration.md
@@ -76,7 +76,7 @@ export default defineEventHandler((event) => {
 ```
 ::
 
-`useRuntimeConfig(event)` is an auto-imported function. Read more about [auto-imports](/auto-imports).
+`useRuntimeConfig(event)` is an auto-imported function. Read more about [auto-imports](/guide/auto-imports).
 
 ### Local development
 
