docs: fix typo in defineCachedFunction example

--- a/docs/content/1.guide/5.cache.md
+++ b/docs/content/1.guide/5.cache.md
@@ -100,7 +100,7 @@ For example, you could want to cache for 1 hour the result of an API call:
 
 ::code-group
 ```ts [utils/github.ts]
-export const cachedGHStars = definedCachedFunction(async (repo: string) => {
+export const cachedGHStars = defineCachedFunction(async (repo: string) => {
   const data: any = await $fetch(`https://api.github.com/repos/${repo}`)
 
   return data.stargazers_count
