Clarify difference between dir and baseURL

--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -133,6 +133,8 @@ The config above generates the following header in the assets under `public/imag
 
 `cache-control: public, max-age=604800, immutable`
 
+The `dir` option is where your files live on your file system; the `baseURL` option is the folder they will be accessible from when served/bundled.
+
 ### `compressPublicAssets`
 
 - Default: `{ gzip: false, brotli: false }`{lang=ts}
