docs: migrate to undocs

--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -4,101 +4,50 @@ icon: ri:rocket-2-line
 
 # Getting Started
 
-<!-- TODO: Better introduction Under the hood, Nitro is using [h3](https://h3.unjs.io) as HTTP framework, embeds many utilities (file routing, storage, cache...) and preconfigured packages like [unimports](https://unimports.unjs.io) or [unstorage](https://unstorage.unjs.io) and provide a set of presets to deploy your server anywhere.
+## Quick Start
 
-Now you know what Nitro is, let's get started and create your first Nitro app!
+### Online playground
 
--->
+The easiest way to get started with Nitro is to use the [online playground](https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world).
 
-## Play Online
+### Starter Template
 
-The easiest way to get started with Nitro is to use the online playground.
 
-:button-link[Open on Stackblitz]{href="https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world" icon="simple-icons:stackblitz" blank style="margin-right: 10px;margin-bottom:10px;"}
-:button-link[Open on CodeSandbox]{href="https://codesandbox.io/p/sandbox/nitro-template-5jssbm" icon="simple-icons:codesandbox" blank}
-
-## Starter Template
-
-::callout
-#summary
 Make sure you have installed the recommended setup:
-#content
-* **Node.js**<sup>*</sup> (latest LTS version) 👉 [Download](https://nodejs.org/en/download/)
-* **Visual Studio Code**  [Download](https://code.visualstudio.com/)
-* [corepack](https://nodejs.org/api/corepack.html) for using pnpm and yarn. 👉 Run `corepack enable`
-::
+
+- Latest LTS version of [Node.js](https://nodejs.org/en), or [Bun](https://bun.sh/).
+- [Visual Studio Code](https://code.visualstudio.com/).
 
 Create a new project using starter template:
 
-::code-group
+:pm-x{command="giget@latest nitro nitro-app --install"}
 
-```bash [npx]
-npx giget@latest nitro nitro-app
-```
-
-```bash [pnpm]
-pnpm dlx giget@latest nitro nitro-app
-```
-
-```bash [bun]
-bunx giget@latest nitro nitro-app
-```
-
-::
 
 ```sh
 cd nitro-app
 ```
 
-Install the dependencies:
-
-::code-group
-
-```bash [npm]
-npm install
-```
-
-```bash [yarn]
-yarn install
-```
-
-```bash [pnpm]
-pnpm install
-```
-
-```bash [bun]
-bun install
-```
-
-::
-
 Start the development server:
 
-```bash
-npm run dev
-```
+:pm-run{script="dev"}
 
 Nitro is ready at `http://localhost:3000/`!
 
-::alert
+::tip
 Check `.nitro/dev/index.mjs` if want to know what is happening
 ::
 
 Build your production-ready server:
 
-```bash
-npm run build
-```
+:pm-run{script="build"}
 
 Output is in the `.output` directory and ready to be deployed on almost any provider with no dependencies.
 
 You can try it locally with:
 
-```bash
-npm run preview
-```
+:pm-run{script="preview"}
 
-::alert{type="info"}
+::read-more
 You can find more examples in the Nitro repository: [unjs/nitro/examples](https://github.com/unjs/nitro/tree/main/examples)
 ::
 
@@ -106,21 +55,21 @@ You can find more examples in the Nitro repository: [unjs/nitro/examples](https:
 
 The starter template some important files to get you started.
 
-`package.json`
+##### `package.json`
 
 The `package.json` file contains all the dependencies and scripts for your project.
 
-`nitro.config.ts`
+##### `nitro.config.ts`
 
 The `nitro.config.ts` file contains the configuration for Nitro.
 
-`tsconfig.json`
+##### `tsconfig.json`
 
 The `tsconfig.json` file contains the TypeScript configuration for your project. It extends an automatically generated `./.nitro/types/tsconfig.json` file that contains the configuration for Nitro.
 
 You can use `npm run prepare` to generate some Nitro files in `.nitro` directory.
 
-::alert{type="info"}
+::warn
 Do not change this file directly, use `typescript` key in `nitro.config.ts` instead.
 ::
 
