--- a/docs/1.guide/3.routing.md
+++ b/docs/1.guide/3.routing.md
@@ -5,7 +5,7 @@ icon: ri:direction-line
 
 # Routing
 
-Nitro support filesystem routing to define handler as well as defining route rules for maximum flexibility and performance.
+> Nitro support filesystem routing to define handler as well as defining route rules for maximum flexibility and performance.
 
 A handle is a function that will be binded to a route and executed when the route is matched by the router for an incoming request.
 
